# DailyTest

libevent_demo/: CMakeLists.txt  main.cpp
libevent_demo/libevent/include/event2/: event-config.h
libevent_demo/libevent/lib/: libevent-2.2.so.1.0.0  libevent.la  libevent_core-2.2.so.1.0.0  libevent_core.la  libevent_extra.la  libevent_pthreads.la
libevent_demo/libevent/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc  libevent_pthreads.pc
selfLib/: CMakeLists.txt  Thread.h
sipserver/: CMakeLists.txt  main.cpp
siptest/: CMakeLists.txt  main.cpp
siptest/lib/: libeXosip2.la
sockserver/: CMakeLists.txt  local_server_main.cpp  local_server_udp_main.cpp  main.cpp  main_epoll.cpp  main_select.cpp  main_udp_server.cpp  tags
test/: CMakeLists.txt  local_sock_main.cpp  local_sock_udp_main.cpp  main.cpp  tags
